reference-project/k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-quarkus-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
        #- demo-quarkus.localhost
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-quarkus-rules
spec:
  hosts:
    - "*"
    #- demo-quarkus.localhost
  gateways:
    - demo-quarkus-gateway
  http:
    - match:
        - uri:
            prefix: /animals
        - uri:
            prefix: /q/health/ready
      route:
        - destination:
            host: demo-quarkus
            port:
              number: 8080
