reference-project/k8s/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-keycloak"
spec:
  selector:
    matchLabels:
      app: demo-quarkus
  jwtRules:
    - issuer: "http://keycloak-demo-quarkus.localhost/auth/realms/demo-quarkus"
      jwksUri: "http://keycloak.default:8080/auth/realms/demo-quarkus/protocol/openid-connect/certs"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwt-require
spec:
  selector:
    matchLabels:
      app: demo-quarkus
  action: ALLOW
  rules:
  # get request
  - to:
    - operation:
        methods: ["GET"]
        paths: [ "/animals", "/animals/*"]
    when:
      - key: request.auth.claims[realm_access][roles]
        values: [ "user", "admin" ]
  # post and delete request
  - to:
    - operation:
        methods: [ "POST", "DELETE" ]
        paths: [ "/animals", "/animals/*" ]
    when:
      - key: request.auth.claims[realm_access][roles]
        values: [ "admin" ]
  # This rule doesn't have `from` or `when` allowing any access (without JWT)
  - to:
    - operation:
        paths: [ "/q/health/ready"]
